--- a/pom.xml
+++ b/pom.xml
@@ -34,19 +34,23 @@
                 </configuration>
             </plugin>
 
-<plugin>
-    <groupId>org.pitest</groupId>
-    <artifactId>pitest-maven</artifactId>
-    <version>LATEST</version>
-    <configuration>
-      <targetClasses>
-        <param>com.leokom.chess.*</param>
-      </targetClasses>
-      <targetTests>
-        <param>com.leokom.chess.*</param>
-      </targetTests>
-    </configuration>
-  </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>LATEST</version>
+                <configuration>
+                  <targetClasses>
+                    <param>com.leokom.chess.*</param>
+                  </targetClasses>
+                  <targetTests>
+                    <param>com.leokom.chess.*</param>
+                  </targetTests>
+                </configuration>
+              </plugin>
         </plugins>
     </build>
+    <properties>
+        <!-- TODO: can this be configured with the pitest-maven plugin itself? -->
+        <sonar.pitest.mode>active</sonar.pitest.mode>
+    </properties>
 </project>
