--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,8 @@
     <properties>
         <!-- TODO: can this be configured with the pitest-maven plugin itself? -->
         <sonar.pitest.mode>active</sonar.pitest.mode>
+
+        <!-- Preventing [WARNING] Using platform encoding to copy filtered resources -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
