Maven best practices - avoid LATEST version that can be unstable etc. Use some specific version - if we want to update - need to do it manually

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>LATEST</version>
+                <version>0.29</version>
                 <configuration>
                   <targetClasses>
                     <param>com.leokom.chess.*</param>
