--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         </dependency>
     </dependencies>
 
+
     <build>
         <plugins>
             <plugin>
@@ -56,6 +57,44 @@
               </plugin>
         </plugins>
     </build>
+
+
+  <!-- BEGIN: Specific to mapping unit tests and covered code (Sonar)-->
+	<profiles>
+    <profile>
+      <id>coverage-per-test</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <!-- Minimal supported version is 2.4 -->
+            <version>2.13</version>
+            <configuration>
+              <properties>
+                <property>
+                  <name>listener</name>
+                  <value>org.sonar.java.jacoco.JUnitListener</value>
+                </property>
+              </properties>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.codehaus.sonar-plugins.java</groupId>
+          <artifactId>sonar-jacoco-listeners</artifactId>
+          <version>1.2</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+	</profile>
+	</profiles>
+
+
+
     <properties>
         <!-- TODO: can this be configured with the pitest-maven plugin itself? -->
         <sonar.pitest.mode>active</sonar.pitest.mode>
