--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
@@ -121,6 +121,7 @@
 
 
     <properties>
+        <java.version>1.8</java.version>
         <!-- Preventing [WARNING] Using platform encoding to copy filtered resources -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
