--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
@@ -121,7 +121,6 @@
 
 
     <properties>
-        <java.version>1.8</java.version>
         <!-- Preventing [WARNING] Using platform encoding to copy filtered resources -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
