--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,16 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- To try improved lambdas in tests, if it succeeds
+        we may use it in core as well -->
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jool</artifactId>
+            <version>0.9.10</version>
+
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.fluxchess</groupId>
             <artifactId>jcpi</artifactId>
@@ -108,7 +118,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <!-- Minimal supported version is 2.4 -->
-            <version>2.17</version>
+            <version>2.19.1</version>
             <configuration>
               <properties>
                 <property>
