--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.fluxchess</groupId>
             <artifactId>jcpi</artifactId>
             <version>1.4.0</version>
