The Manifest has been removed. It's generated by Maven-jar-plug-in now. This will allow better cross-IDE development (e.g. in Eclipse it should work also seamlessly) However the jar file name itself is not fine yet.

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,21 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+
+                    <outputDirectory>E:\Games\WinBoard-4.7.3\LeokomChess</outputDirectory>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
