Lib prefix has been added to the Manifest

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <artifactId>Chess</artifactId>
     <version>1.1-SNAPSHOT</version>
 
-
     <repositories>
         <repository>
             <id>maven.fluxchess.com</id>
@@ -89,10 +88,12 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.0.2</version>
                 <configuration>
+
                     <outputDirectory>E:\Games\WinBoard-4.7.3\LeokomChess</outputDirectory>
                     <archive>
                         <manifest>
-                            <addClasspath>true</addClasspath>
+                        	<addClasspath>true</addClasspath>
+                        	<classpathPrefix>lib</classpathPrefix>
                         </manifest>
                     </archive>
                 </configuration>
