Main class is provided.
Still To Do : copy libs; clean-up build artifact from IDEA; hotkeys to
run Maven clean install

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
                         <manifest>
                         	<addClasspath>true</addClasspath>
                         	<classpathPrefix>lib</classpathPrefix>
+                        	<mainClass>com.leokom.chess.MainRunner</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
