Add a comment why we need explicit configuration of maven-jar-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,8 @@
                     </execution>
                 </executions>
             </plugin>
-
+			
+			<!-- Set up Jar generation properties, e.g. automatic generation of manifest -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
