--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
+#IDEA-specific files
 .idea/libraries/
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
 
-#chess-specific files
+#Chess-specific files
 LeokomChess.log
