--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 #IDEA-specific files
+/out/
 .idea/libraries/
 .idea/compiler.xml
 .idea/encodings.xml
@@ -6,6 +7,9 @@
 .idea/modules.xml
 .idea/vcs.xml
 .idea/workspace.xml
+
+#Maven-specific files
+/target/
 
 #Chess-specific files
 LeokomChess.log
