--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>Chess</name>
     <groupId>com.leokom</groupId>
     <artifactId>Chess</artifactId>
-    <version>0.2</version>
+    <version>0.3-SNAPSHOT</version>
 
     <repositories>
         <repository>
