--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ language: java
 jdk:
   - oraclejdk8
 
+#enables Docker & Amazon S3-based building
+#https://docs.travis-ci.com/user/migrating-from-legacy/?utm_source=legacy-notice&utm_medium=banner&utm_campaign=legacy-upgrade
 sudo: false
