Added Git SCM info needed for the release.
In combination with settings.xml it can be done as a draft now.

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,15 @@
     <artifactId>Chess</artifactId>
     <version>0.3-SNAPSHOT</version>
 
+
+    <!-- Added in order to support github-release-plugin.
+    This information is also useful itself for semantic purposes.
+     -->
+    <scm>
+        <url>https://github.com/lrozenblyum/chess</url>
+        <connection>scm:git:https://github.com/lrozenblyum/chess.git</connection>
+    </scm>
+
     <repositories>
         <repository>
             <id>maven.fluxchess.com</id>
