--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,10 @@
                     <description>Test release</description>
                     <releaseName>Test Automation: ${project.version}</releaseName>
                     <tag>${project.version}</tag>
+                    <!-- Automatically it's based on SNAPSHOT presence, however in chess at the moment
+                     we consider all 0.* as pre-releases -->
+                    <prerelease>true</prerelease>
+                    <failOnExistingRelease>true</failOnExistingRelease>
                 </configuration>
             </plugin>
         </plugins>
