--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
+                    <finalName>LeokomChess-${project.version}</finalName>
                     <descriptors>
                         <descriptor>src/assembly/assembly-release-archive.xml</descriptor>
                     </descriptors>
