--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>Chess</name>
     <groupId>com.leokom</groupId>
     <artifactId>Chess</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3</version>
 
 
     <!-- Added in order to support github-release-plugin.
@@ -209,7 +209,12 @@
                 <version>1.3.0</version>
                 <configuration>
                     <releaseName>${project.version} release</releaseName>
-                    <description>Test release</description>
+                    <description>
+                        50-moves rule (works for the case from 9.3b rules article).
+                        Release to GitHub: automated.
+
+                        In remembrance of my friend Boris Livshitz who passed away today.
+                    </description>
                     <tag>${project.version}</tag>
                     <!-- Automatically it's based on SNAPSHOT presence, however in chess at the moment
                      we consider all 0.* as pre-releases -->
