--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,5 @@ script:
   # travis 'script' phase is by default: mvn test -B
   # -B means: batch-mode (no questions, no progress-related logs pollution)
   # jacoco call is needed for test coverage for sonar
-  - mvn org.jacoco:jacoco-maven-plugin:prepare-agent test sonar:sonar -B
+  # specified the project key explicitly because I didn't like the automatically generate Maven-based name (com.leokom:chess)
+  - mvn org.jacoco:jacoco-maven-plugin:prepare-agent test sonar:sonar -B -Dsonar.projectKey=lrozenblyum-chess
