Upgraded maven-install-plugin and maven-deploy-plugin.
Since they weren't configured before, I decided to do that
via pluginManagement.

--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,23 @@
                 </executions>
             </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <!-- The most recent plugin at 2019-02-17, although the versioning scheme is unclear -->
+                    <!-- NOTE: it should be used in pair with maven deploy plug-in of the same version -->
+                    <version>3.0.0-M1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
 
