Fix failing build that depends on Oracle JDK8
Oracle JDK8 is not available on default 'Xenial' environment.
That's why: switched to 'Trusty' environment which supports the Oracle JDK8
https://docs.travis-ci.com/user/reference/trusty/

NOTE: the alternative would be to switch to OpenJDK

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: java
 jdk:
   - oraclejdk8
 
+dist: trusty
+
 addons:
   sonarcloud:
     # the organization key was found here: https://sonarcloud.io/account/organizations
