--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ script:
   # -B means: batch-mode (no questions, no progress-related logs pollution)
   # jacoco call is needed for test coverage for sonar
   # specified the project key explicitly because I didn't like the automatically generate Maven-based name (com.leokom:chess)
+  # thanks to this explicit specification we're free to change Maven coordinates
   - mvn test sonar:sonar -Pcoverage -B -Dsonar.projectKey=lrozenblyum-chess
