--- a/pom.xml
+++ b/pom.xml
@@ -61,15 +61,14 @@
 			<scope>test</scope>
 		</dependency>
 
-        <!--
-        ArchUnit uses SLF4j, using Log4j2 implementation to avoid
-         SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder"-->
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>${log4j2version}</version>
-			<scope>test</scope>
-		</dependency>
+        <!-- ArchUnit uses SLF4j, using Log4j2 implementation to avoid
+         SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder" -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j2version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.mutabilitydetector</groupId>
