--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,6 @@ script:
   # specified the project key explicitly because I didn't like the automatically generate Maven-based name (com.leokom:chess)
   # thanks to this explicit specification we're free to change Maven coordinates
   - mvn test -Pcoverage -B
+  - export JAVA_HOME=$HOME/oraclejdk11
+  - $TRAVIS_BUILD_DIR/install-jdk.sh --install oraclejdk11 --target $JAVA_HOME
   - mvn sonar:sonar -Dsonar.projectKey=leokom-chess
