--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,10 @@ script:
   # coverage profile is needed for test coverage for sonar
   # specified the project key explicitly because I didn't like the automatically generate Maven-based name (com.leokom:chess)
   # thanks to this explicit specification we're free to change Maven coordinates
-  - mvn test -Pcoverage -B
+  #- mvn test -Pcoverage -B
   - echo $JAVA_HOME
   - cd $TRAVIS_BUILD_DIR
-  - ls
-  - mvn sonar:sonar -Dsonar.projectKey=leokom-chess
+  - ls -la
+  - cd /usr/lib/jvm
+  - ls -la
+  #- mvn sonar:sonar -Dsonar.projectKey=leokom-chess
