--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ script:
   - ls -la
   - export JAVA_HOME=/usr/local/lib/jvm/openjdk11
   - java -version
-  - update-java-alternatives --list
+  #- update-java-alternatives --list
   - cd /
   - find . -name "install-jdk.sh"
   - echo "Done"
