--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.leokom.games</groupId>
     <artifactId>chess</artifactId>
-    <version>0.6</version>
+    <version>0.7-SNAPSHOT</version>
 
     <name>Leokom Chess</name>
     <inceptionYear>2012</inceptionYear>
@@ -240,16 +240,7 @@
                 <configuration>
                     <releaseName>${project.version} release</releaseName>
                     <description>
-                        Brain: RandomBrain introduced.
-                        PR: Defined the game name: Leokom Chess.
-                        CI: migrated to Xenial Travis environment.
-                        CI: migrated to OpenJDK.
-                        CI: SonarCloud analyzing is based on JDK11.
-                        Maintainability: split chess-independent notions from chess-dependent (with ArchUnit).
-                        Maintainability: dropped legacy CI support.
-                        Maintainability: local refactorings.
-
-                        The release is dedicated to the  Latkes Ovnt (the 5'th day of Hanukkah 5781).
+                        to be defined
                     </description>
                     <tag>${project.version}</tag>
                     <!-- Automatically it's based on SNAPSHOT presence, however in chess at the moment
