--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '8'
-        distribution: 'oracle'
+        distribution: 'openjdk'
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
