--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,22 @@ jobs:
         # -B means: batch-mode (no questions, no progress-related log pollution)
         # coverage profile is needed for test coverage for sonar
         run: mvn test -Pcoverage -B
+  sonar:
+    runs-on: ubuntu-latest
+    # carries Sonar secret
+    environment: CI
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          # unlimited fetch depth for Sonar
+          fetch-depth: 0
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          # some arbitrary distribution selected
+          distribution: 'temurin'
+          cache: maven
       - name: Run Sonar analyzing
         # Sonar would require extra preparations
         run: mvn sonar:sonar -Dsonar.projectKey=leokom-chess
